# gpu_compute

./: .gitignore  Cargo.toml  build.rs  exit.txt  readme.md
benches/: basic.rs  buffer.rs  buffer_f32.rs  cpu_perf.rs  cuda.rs  final_accumulation.rs  opencl.rs  sizes.rs  vector_buffer.rs
shaders/: basic.vs  basic_image_access.fs  basic_sampler_access.fs
shaders/instances/: attach_discard_sampled1D_many.glsl  attach_discard_sampled_many.glsl  attach_discard_sbuffer_loop.glsl  attach_discard_sbuffer_many.glsl  attach_none_sbuffer_loop.glsl  buffer_discard_sbuffer_loop.glsl  buffer_none_abuffer_loop.glsl  buffer_none_sbuffer_loop.glsl  subgroup_count.glsl  subgroup_find.glsl  subgroup_find_quad.glsl
shaders/instances/gpu_min/: attach_none_sbuffer_loop.glsl  attach_none_sbuffer_many.glsl  buffer_none_sbuffer_loop.glsl
shaders/instances/gpu_min/vectorized/: buffer_none_sbuffer_loop.glsl
shaders/instances/gpu_sum/: attach_discard_sampled1D_many.glsl  attach_none_sampled2D_loop.glsl  attach_none_sbuffer_loop.glsl  buffer_none_abuffer_loop.glsl  buffer_none_atomic_add_buffer_loop.glsl  buffer_none_groupbuffer_decimate_loop.glsl  buffer_none_groupbuffer_loop.glsl  buffer_none_sbuffer_loop.glsl  buffer_none_subgroup_abuffer_loop.glsl  buffer_none_subgroup_casbuffer_loop.glsl
shaders/instances/vectorized/: buffer_none_sbuffer_loop.glsl
shaders/opencl/: min_column_major_f32.cl  min_row_major_f32.cl  sum_column_major.cl  sum_row_major.cl
shaders/pluggable/: constants.glsl  location.glsl  prelude.glsl
shaders/pluggable/discarder/: discard.glsl  none.glsl
shaders/pluggable/get_data/: loop.glsl  many_calls.glsl
shaders/pluggable/raw_get_data/: sampled_1D.glsl  sampled_2D.glsl  storage_buffer.glsl  storage_buffer_1D.glsl  storage_image_1D.glsl  storage_image_2D.glsl
shaders/pluggable/writer/: atomic_add_buffer.glsl  atomic_buffer.glsl  atomic_subgroup_add_buffer.glsl  atomic_subgroup_buffer.glsl  attachment.glsl  buffer.glsl  subgroup_add_buffer.glsl  subgroup_decimate_buffer.glsl
src/: an_external_function.c  capture.rs  execute_util.rs  execute_util_compute.rs  lib.rs  main.rs  vulkan_util.rs
src/cuda/: cuda_sum.cu
(+1 files in other folders)
