[package]
name = "gpu_compute"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[patch.crates-io]
qutex = { git = "https://github.com/dbartussek/qutex.git" }

[features]
fill_rectangle = []

[dependencies]
byte-unit = "4.0.19"
bytemuck = "1.13.1"
derivative = "2.2.0"
image = "0.24.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
nalgebra = { version = "0.32.2", features = ["bytemuck"] }
num = "0.4.1"
ocl = "0.19.4"
ocl_futures = { version = "0.1.31", package = "futures" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.7.0"
renderdoc = "0.11.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sha3 = "0.10.8"
smallstr = { version = "0.3.0", features = ["serde", "union"] }
smallvec = { version = "1.10.0", features = ["serde", "union"] }
vulkano = "0.33.0"
vulkano-shaders = {version = "0.33.0", features = ["shaderc-debug"]}
vulkano-win = "0.33.0"
winit = "0.28.6"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "sizes"
harness = false

[[bench]]
name = "buffer"
harness = false
[[bench]]
name = "buffer_f32"
harness = false

[[bench]]
name = "cpu_perf"
harness = false

[[bench]]
name = "opencl"
harness = false
